<resources>
    <string name="app_name">Vital signs monitor</string>
    <string name="login">Login</string>
    <string name="create_profile">Create profile</string>
    <string name="name_required">Name*</string>
    <string name="birthday_required">Birthday*</string>
    <string name="password_required">Password*</string>
    <string name="continue_string">Continue</string>
    <string name="field_required">*Field required</string>
    <string name="pick_birthday">Pick your birthday</string>
    <string name="field_must_be_alphanumerical">Only letters, numbers and spaces allowed</string>
    <string name="field_too_long">Field must be %1$d or less characters long</string>
    <string name="field_must_not_contain_whitespaces">Field must not contain whitespaces</string>
    <string name="profile_created_succesfully">Profile created successfully!</string>
    <string name="add_emergency_contact">Add contact</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="create_emergency_contact">Create emergency contact</string>
    <string name="phone_number_required">Phone number*</string>
    <string name="message_send_warning">Remember: a test message will be sent. If the message does not reach its destination, please check that the information is correct and try again.</string>
    <string name="emergency_contact_created_successfully">Emergency contact created successfully!</string>
    <string name="invalid_format">Invalid format, please check again</string>
    <string name="ready">Ready</string>
    <string name="name_already_exists">The name already exists, please choose another one</string>
    <string name="edit_emergency_contact">Edit emergency contact</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>
    <string name="emergency_contact_updated">Emergency contact updated successfully!</string>
    <string name="emergency_contact_deleted">Emergency contact deleted successfully!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_suere">Are you sure?</string>
    <string name="wrong_password">Password is incorrect</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="oxygen">Oxygen</string>
    <string name="blood_pressure">Blood Press.</string>
    <string name="settings">Settings</string>
    <string name="setting_menu">Settings menu</string>
    <string name="edit_profile">Edit profile</string>
    <string name="emergency_messages">Emergency messages</string>
    <string name="logout">Logout</string>
    <string name="profile_updated">Profile updated successfully!</string>
    <string name="profile_deleted">Profile deleted successfully!</string>
    <string name="blood_oxygen_title">Blood oxygen</string>
    <string name="heart_rate_title">Heart rate</string>
    <string name="blood_pressure_title">Blood pressure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="band_not_connected">The smart band is disconnected, please connect it to visualize your data in real time.</string>
    <string name="bps">bpm</string>
    <string name="no_send_message_permission_granted">Warning: The send messages permission is not granted, thus the emergency messages service is deactivated.</string>
    <string name="emergency_contact_confirmation_message">This is a test message to verify that you are an Emergency Contact in the Monitor App</string>
    <string name="notification_settings">Notification settings</string>
    <string name="activate_notifications">Activate notifications</string>
    <string name="time_required">Time*</string>
    <string name="activate_bluetooth">Activate bluetooth</string>
    <string name="empty_value">--</string>
    <string name="bluetooth_disabled_warning">Bluetooth is disabled, please enable it to visualize data</string>
    <string name="location_disabled_warning">Location is disabled, please enable it to visualize your data (Location services are necesary for use of bluetooth)</string>
    <string name="smart_band_not_connected_warning">Smart band is not connected, make sure it\'s on and within range</string>
    <string name="max_heart_rate">Max Heart Rate</string>
    <string name="healthy_blood_oxygen">Healthy Blood Oxygen</string>
    <string name="emergency_message">Hola</string>
    <string name="aviso_privacidad_title">Aviso de Privacidad</string>
</resources>