<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".emergencycontact.EmergencyContactsActivity">

    <TextView
        android:id="@+id/emergency_contacts_activity_title"
        style="@style/Widget.Monitor.TextView.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emergency_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/emergency_contacts_option_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_contacts_activity_title"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHeight_max="304dp"
        app:layout_constraintHeight_min="0dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_emergency_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_contacts_option_list">

        <FrameLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/Widget.Monitor.ImageView.IconLarge"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/icon_add"/>

            <TextView
                style="@style/Widget.Monitor.TextView"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_emergency_contact"/>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/emergency_contacts_continue_button"
        style="@style/Widget.Monitor.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>