<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <TextView
        android:id="@+id/title"
        style="@style/Widget.Monitor.TextView.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/edit_profile_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                style="@style/Widget.Monitor.ImageView.IconLarge"
                android:layout_gravity="center_vertical|start"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/icon_profile" />

            <TextView
                style="@style/Widget.Monitor.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/edit_profile" />

            <ImageView
                style="@style/Widget.Monitor.ImageView.IconLarge"
                android:layout_gravity="center_vertical|end"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_baseline_arrow_right_24" />

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/emergency_contacts_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_card_view">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                style="@style/Widget.Monitor.ImageView.IconLarge"
                android:layout_gravity="center_vertical|start"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_phone_30dp" />

            <TextView
                style="@style/Widget.Monitor.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/emergency_contacts" />

            <ImageView
                style="@style/Widget.Monitor.ImageView.IconLarge"
                android:layout_gravity="center_vertical|end"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_baseline_arrow_right_24" />

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:id="@+id/emergency_messages_card_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/emergency_contacts_card_view">-->

<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="8dp">-->

<!--            <ImageView-->
<!--                style="@style/Widget.Monitor.ImageView.IconLarge"-->
<!--                android:layout_gravity="center_vertical|start"-->
<!--                android:importantForAccessibility="no"-->
<!--                app:srcCompat="@drawable/ic_baseline_message_24" />-->

<!--            <TextView-->
<!--                style="@style/Widget.Monitor.TextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical|center_horizontal"-->
<!--                android:text="@string/emergency_messages" />-->

<!--            <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                android:id="@+id/emergency_messages_switch"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="end|center_vertical"-->
<!--                android:clickable="false"-->
<!--                android:focusable="false"/>-->

<!--        </FrameLayout>-->

<!--    </com.google.android.material.card.MaterialCardView>-->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/logout_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_contacts_card_view">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                style="@style/Widget.Monitor.ImageView.IconLarge"
                android:layout_gravity="center_vertical|start"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_logout" />

            <TextView
                style="@style/Widget.Monitor.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/logout" />

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>